--- a/kubernetes/03-matomo.yaml
+++ b/kubernetes/03-matomo.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: matomo-env
+  namespace: matomo
 data:
   MATOMO_DATABASE_HOST: mariadb
   MATOMO_DATABASE_ADAPTER: mysql
@@ -16,6 +17,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: nginx-config
+  namespace: matomo
 data:
   default.conf: |
     upstream php-handler {
@@ -82,6 +84,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: matomo-deployment
+  namespace: matomo
 spec:
   replicas: 1
   selector:
@@ -113,6 +116,7 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: nginx-deployment
+  namespace: matomo
 spec:
   replicas: 1
   selector:
@@ -147,6 +151,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: nginx
+  namespace: matomo
 spec:
   selector:
     app: nginx
@@ -160,6 +165,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: matomo
+  namespace: matomo
 spec:
   selector:
     app: matomo
@@ -173,6 +179,7 @@ apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
   name: matomo-pvc
+  namespace: matomo
 spec:
   accessModes:
     - ReadWriteOnce
