Add an metallb sharing key to the nginx LB service

--- a/kubernetes/03-matomo.yaml
+++ b/kubernetes/03-matomo.yaml
@@ -164,6 +164,8 @@ kind: Service
 metadata:
   name: nginx
   namespace: matomo
+  annotations:
+    metallb.universe.tf/allow-shared-ip: "ui-back-end-sharing-key"
 spec:
   selector:
     app: nginx
